@@ -1,6 +1,7 @@
 0.03
  - Add doc for Wikibase::Datatype::Print::Value::Item.
  - Add doc for Wikibase::Datatype::Print::Value::Monolingual.
+ - Add tests for Wikibase::Datatype::Print::Value::Item.
  - Fix doc description for Wikibase::Datatype::Print::Value::Globecoordinate.
 
 0.02 2023-04-10T11:37:10+02:00
